# CICD-Test-v2

./: .gitignore  .gitmessage.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
ci/: check_mr_logs.py  code_format_helper.py  ruff.toml  typing_helper.py
