[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ltcsz-calculator"
version = "0.1.0"
description = "Calculator and CI/CD test"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # 你的项目依赖
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "bandit>=1.7",
    "safety>=2.0",
    "build>=0.10",
    "twine>=4.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/your-username/your-project"
Repository = "https://github.com/your-username/your-project"
Issues = "https://github.com/your-username/your-project/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/your_package"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["--cov=src", "--cov-report=term-missing", "--cov-report=html"]